fb_with_pvc/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: filebrowser
spec:
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: filebrowser
    weight: 100
